# serializer version: 1
# name: test_alerts[alerts]
  '''
  <section class="container" id="alerts">
      <h2>
          Alertes
      </h2>
      <h3 class="my-3">
          info
      </h3>
      <div class="alert alert-info" role="status">
          <div class="row">
              <div class="col-auto pe-0">
                  <i aria-hidden="true" class="ri-information-line ri-xl text-info">
                  </i>
              </div>
              <div class="col">
                  <p class="mb-2">
                      <strong>
                          Le titre de l'alerte de type info
                      </strong>
                  </p>
                  <p class="mb-0">
                      Le contenu de dolor sit amet, consectetur adipiscing elit. Mauris luctus, libero nec molestie posuere, dui augue auctor ex, vitae suscipit lacus lectus dictum elit. Nunc iaculis erat in placerat pulvinar. Vestibulum lobortis sollicitudin nulla. Pellentesque ac velit orci. Ut vitae venenatis felis, id faucibus arcu. Fusce ac urna ante. Etiam consectetur, nulla eget malesuada cursus, leo ex volutpat velit, at feugiat lectus dui a arcu.
                  </p>
              </div>
          </div>
      </div>
      <h3 class="my-3">
          success
      </h3>
      <div class="alert alert-success" role="status">
          <div class="row">
              <div class="col-auto pe-0">
                  <i aria-hidden="true" class="ri-checkbox-circle-line ri-xl text-success">
                  </i>
              </div>
              <div class="col">
                  <p class="mb-2">
                      <strong>
                          Le titre de l'alerte de type success
                      </strong>
                  </p>
                  <p class="mb-0">
                      Le contenu de dolor sit amet, consectetur adipiscing elit. Mauris luctus, libero nec molestie posuere, dui augue auctor ex, vitae suscipit lacus lectus dictum elit. Nunc iaculis erat in placerat pulvinar. Vestibulum lobortis sollicitudin nulla. Pellentesque ac velit orci. Ut vitae venenatis felis, id faucibus arcu. Fusce ac urna ante. Etiam consectetur, nulla eget malesuada cursus, leo ex volutpat velit, at feugiat lectus dui a arcu.
                  </p>
              </div>
          </div>
      </div>
      <h3 class="my-3">
          warning
      </h3>
      <div class="alert alert-warning" role="status">
          <div class="row">
              <div class="col-auto pe-0">
                  <i aria-hidden="true" class="ri-error-warning-line ri-xl text-warning">
                  </i>
              </div>
              <div class="col">
                  <p class="mb-2">
                      <strong>
                          Le titre de l'alerte de type warning
                      </strong>
                  </p>
                  <p class="mb-0">
                      Le contenu de dolor sit amet, consectetur adipiscing elit. Mauris luctus, libero nec molestie posuere, dui augue auctor ex, vitae suscipit lacus lectus dictum elit. Nunc iaculis erat in placerat pulvinar. Vestibulum lobortis sollicitudin nulla. Pellentesque ac velit orci. Ut vitae venenatis felis, id faucibus arcu. Fusce ac urna ante. Etiam consectetur, nulla eget malesuada cursus, leo ex volutpat velit, at feugiat lectus dui a arcu.
                  </p>
              </div>
          </div>
      </div>
      <h3 class="my-3">
          danger
      </h3>
      <div class="alert alert-danger" role="alert">
          <div class="row">
              <div class="col-auto pe-0">
                  <i aria-hidden="true" class="ri-close-circle-line ri-xl text-danger">
                  </i>
              </div>
              <div class="col">
                  <p class="mb-2">
                      <strong>
                          Le titre de l'alerte de type danger
                      </strong>
                  </p>
                  <p class="mb-0">
                      Le contenu de dolor sit amet, consectetur adipiscing elit. Mauris luctus, libero nec molestie posuere, dui augue auctor ex, vitae suscipit lacus lectus dictum elit. Nunc iaculis erat in placerat pulvinar. Vestibulum lobortis sollicitudin nulla. Pellentesque ac velit orci. Ut vitae venenatis felis, id faucibus arcu. Fusce ac urna ante. Etiam consectetur, nulla eget malesuada cursus, leo ex volutpat velit, at feugiat lectus dui a arcu.
                  </p>
              </div>
          </div>
      </div>
      <h3 class="my-3">
          important
      </h3>
      <div class="alert alert-important" role="status">
          <div class="row">
              <div class="col-auto pe-0">
                  <i aria-hidden="true" class="ri-alert-line ri-xl text-important">
                  </i>
              </div>
              <div class="col">
                  <p class="mb-2">
                      <strong>
                          Le titre de l'alerte de type important
                      </strong>
                  </p>
                  <p class="mb-0">
                      Le contenu de dolor sit amet, consectetur adipiscing elit. Mauris luctus, libero nec molestie posuere, dui augue auctor ex, vitae suscipit lacus lectus dictum elit. Nunc iaculis erat in placerat pulvinar. Vestibulum lobortis sollicitudin nulla. Pellentesque ac velit orci. Ut vitae venenatis felis, id faucibus arcu. Fusce ac urna ante. Etiam consectetur, nulla eget malesuada cursus, leo ex volutpat velit, at feugiat lectus dui a arcu.
                  </p>
              </div>
          </div>
      </div>
      <h3 class="my-3">
          rejetable ("dismissible")
      </h3>
      <div class="alert alert-info alert-dismissible fade show" role="status">
          <button aria-label="Fermer" class="btn-close" data-bs-dismiss="alert" type="button">
          </button>
          <div class="row">
              <div class="col-auto pe-0">
                  <i aria-hidden="true" class="ri-information-line ri-xl text-info">
                  </i>
              </div>
              <div class="col">
                  <p class="mb-2">
                      <strong>
                          Le titre de l'alerte rejetable
                      </strong>
                  </p>
                  <p class="mb-0">
                      Le contenu de dolor sit amet, consectetur adipiscing elit. Mauris luctus, libero nec molestie posuere, dui augue auctor ex, vitae suscipit lacus lectus dictum elit. Nunc iaculis erat in placerat pulvinar. Vestibulum lobortis sollicitudin nulla. Pellentesque ac velit orci. Ut vitae venenatis felis, id faucibus arcu. Fusce ac urna ante. Etiam consectetur, nulla eget malesuada cursus, leo ex volutpat velit, at feugiat lectus dui a arcu.
                  </p>
              </div>
          </div>
      </div>
  </section>
  
  '''
# ---
# name: test_global_alerts[global-alerts]
  '''
  <section class="container global-messages-container" id="global-alerts">
      <h2>
          Alertes globales
      </h2>
      <h3 class="my-3">
          info
      </h3>
      <div class="alert alert-info" role="status">
          <div>
              Etiam consectetur, nulla eget malesuada cursus, leo ex volutpat velit, at feugiat lectus dui a arcu.
          </div>
      </div>
      <h3 class="my-3">
          danger
      </h3>
      <div class="alert alert-danger" role="alert">
          <div>
              Etiam consectetur, nulla eget malesuada cursus, leo ex volutpat velit, at feugiat lectus dui a arcu.
          </div>
      </div>
      <h3 class="my-3">
          warning
      </h3>
      <div class="alert alert-warning" role="status">
          <div>
              Etiam consectetur, nulla eget malesuada cursus, leo ex volutpat velit, at feugiat lectus dui a arcu.
          </div>
      </div>
      <h3 class="my-3">
          dismissible
      </h3>
      <div class="alert alert-info alert-dismissible fade show" role="status">
          <button aria-label="Fermer" class="btn-close" data-bs-dismiss="alert" type="button">
          </button>
          <div>
              Etiam consectetur, nulla eget malesuada cursus, leo ex volutpat velit, at feugiat lectus dui a arcu.
          </div>
      </div>
      <h3 class="my-3">
          primary
      </h3>
      <div class="alert alert-primary fade show" role="status">
          <div class="d-flex flex-row justify-content-between align-items-center">
              <p class="mb-0 text-start">
                  <i aria-hidden="true" class="ri-arrow-right-line fw-bold pe-2">
                  </i>
                  Etiam consectetur, nulla eget malesuada cursus, leo ex volutpat velit, at feugiat lectus dui a arcu.
              </p>
              <a aria-label="Quitter la procédure" class="btn-link-white btn-ico align-items-center" href="https://example.com">
                  <i aria-hidden="true" class="ri-close-line ri-xl fw-medium me-1">
                  </i>
                  <span class="fs-sm fw-medium">
                      Quitter
                  </span>
              </a>
          </div>
      </div>
  </section>
  
  '''
# ---
